# python-poetry-template

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Dockerfile  Makefile  README.md  init-project.py  pyproject.toml  requirements.txt
.cursor/rules/: project-structure.mdc
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  dependabot_updates.yml  gitleask.yml  ruff.yml  unit_tests.yml
src/project_name/: __init__.py  config.py  main.py
tests/: conftest.py  test_main.py
tools/: generate_symmetric_key.sh
